# little_rust_ml

./: .gitignore
cnn_little_rust_ml/: Cargo.toml
cnn_little_rust_ml/src/: edge_detection.rs  main.rs
insect_nn_rust/: Cargo.toml  train.ipynb
insect_nn_rust/src/: main.rs
little_rust_ml_framework/: Cargo.toml
little_rust_ml_framework/src/: main.rs
nn_with_tch_fns/: Cargo.toml
nn_with_tch_fns/src/: main.rs
