[package]
name = "insect_nn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = {version = "0.16.0", features = ["download-libtorch"]}
mnist = "0.6.0"
ndarray = "0.15.6"
tqdm = "0.7.0"
image = "0.25.1"
rand = "0.8.5"
walkdir = "2.5.0"
show-image = "0.14.0"
ndarray-npy = "0.8.1"